# kicker

./: CMakeLists.txt
kcontrol/: CMakeLists.txt
kcontrol/background/: CMakeLists.txt
kcontrol/randr/: CMakeLists.txt  krandrtray.cpp
kicker/: CMakeLists.txt
kicker/applets/lockout/: CMakeLists.txt  lockout.cpp  lockout.desktop
kicker/applets/media/: CMakeLists.txt  mediaapplet.cpp  mediaapplet.desktop  mediumbutton.cpp
kicker/applets/menu/: CMakeLists.txt  menuapplet.cpp
kicker/applets/naughty/: NaughtyApplet.cpp
kicker/applets/run/: CMakeLists.txt  runapplet.cpp  runapplet.desktop
kicker/applets/systemtray/: CMakeLists.txt  systemtrayapplet.desktop
kicker/applets/taskbar/: taskbarapplet.desktop
kicker/applets/trash/: CMakeLists.txt  trashapplet.desktop  trashbutton.cpp
kicker/extensions/dockbar/: CMakeLists.txt  dockbarextension.cpp
kicker/kicker/: CMakeLists.txt
kicker/kicker/buttons/: bookmarks.desktop  bookmarksbutton.cpp  browser.desktop  browserbutton.cpp  desktop.desktop  desktopbutton.cpp  extensionbutton.cpp  kbutton.cpp  kmenu.desktop  nonkdeappbutton.cpp  servicebutton.cpp  servicemenubutton.cpp  urlbutton.cpp  windowlist.desktop  windowlistbutton.cpp
kicker/kicker/core/: container_button.cpp  containerarea.cpp  extensionmanager.cpp  kicker.cpp  panelextension.cpp
kicker/kicker/ui/: browser_mnu.cpp  k_mnu.cpp  service_mnu.cpp
kicker/libkicker/: appletinfo.cpp  extensioninfo.cpp  kickerSettings.kcfg  kpanelmenu.cpp  menuinfo.cpp  panelbutton.cpp
kicker/menuext/: CMakeLists.txt
kicker/menuext/find/: findmenu.cpp
kicker/menuext/konq-profiles/: konqy_menu.cpp
kicker/menuext/konsole/: konsole_mnu.cpp  konsolemenu.desktop
kicker/menuext/prefmenu/: prefmenu.cpp  prefmenu.desktop
kicker/menuext/recentdocs/: recentdocs.desktop  recentdocsmenu.cpp
kicker/proxy/: CMakeLists.txt
kicker/settings/: CMakeLists.txt  advancedDialog.cpp  advancedOptions.ui  bgsettings.cpp  extensionInfo.cpp  extensionInfo.h  hidingconfig.cpp  hidingtab.ui  hidingtab_impl.cpp  kicker_config_arrangement.desktop  kicker_config_hiding.desktop  lookandfeelconfig.cpp  lookandfeeltab_impl.cpp  lookandfeeltab_impl.h  main.cpp  main.h  menuconfig.cpp  menutab.ui  menutab_impl.cpp  menutab_impl.h  positionconfig.cpp  positiontab.ui  positiontab_impl.cpp
kicker/taskbar/: CMakeLists.txt  taskbar.cpp  taskbar.h  taskcontainer.cpp  taskcontainer.h  tasklmbmenu.cpp  tasklmbmenu.h  taskrmbmenu.cpp  taskrmbmenu.h
libs/: CMakeLists.txt
(+4 files in other folders)
